--- a/Public/new1.css
+++ b/Public/new1.css
@@ -1,14 +1,26 @@
+html {
+	height:100%;
+}
+
+body {
+	height : 100%;
+	min-height: 100%;
+}
+
 .playlist {
-	height: 100%; 
-	width: 35%; 
-	top: 0%; 
-	right: 0%; 
+	display: block;
+	height: 500px; 
 	border: solid 1px #999; 
-	position: absolute;
 }
 
 #btn {
 	display: none;
+}
+
+.x{
+	max-height: 600px;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 .commonPlaylist {
@@ -17,7 +29,7 @@
 	height: 30%;
 	width:50%;
 	border: solid 1px #999; 
-	position:fixed;
+	position: relative;
 }
 
 * { margin: 0; padding: 0; box-sizing: border-box; }
