--- a/Public/new1.css
+++ b/Public/new1.css
@@ -2,14 +2,23 @@ html {
 	height:100%;
 }
 
+.jumbotron{
+	margin: 0px 0px 0px 0px;
+	padding: 0px 0px 0px 0px;
+}
+
 body {
 	height : 100%;
 	min-height: 100%;
-}
+	background : url("http://www.clipartbest.com/cliparts/4ib/obb/4ibobbRKT.png");
+	background-repeat : no-repeat;
+	background-position: 60% 50%;
+	}
+
 
 .playlist {
 	display: block;
-	height: 500px; 
+	height: 400px; 
 	border: solid 1px #999; 
 }
 
@@ -23,13 +32,76 @@ body {
 	overflow-x: hidden;
 }
 
-.commonPlaylist {
+/*.commonPlaylist {
 	left : 0%;
 	bottom : 0%;
 	height: 30%;
 	width:50%;
 	border: solid 1px #999; 
 	position: relative;
+}*/
+
+.y {
+	background-image: url('https://image-gr.s3.envato.com/files/133968777/01_business_background_with_ofice_supplies_and_tablet_on_wooden_background_t.jpg');
+
+	height :400px;
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+
+.jumbotron
+{
+    height: 400px;
+    padding-top: 0%;
+ 	padding-bottom: 10%;
+ 	padding-left: 0%; 
+}
+
+#header{
+	text-align : center;
+
+}
+#target{
+	font : 20px arial, sans-serif;
+
+}
+
+#stop{
+	 padding-left: 5px;
+    padding-right: 5px;
+}
+
+
+.p {
+	padding-right: 5%;
+	padding-left: 5%;
+}
+
+/*div h1{
+    text-align: center;
+    margin-top: -10px;
+    height: 20px;
+    line-height: 20px;
+    font-size: 15px;
+}
+
+div h1 span{
+    background-color: black;
+}*/
+
+.chat {
+	height:150px;
+	overflow-y: scroll;
+}
+
+h2 {
+	text-align: center;
+}
+
+.commonPlaylist {
+	background-image: url('https://s-media-cache-ak0.pinimg.com/originals/7f/6b/e3/7f6be3d2743ad84cac47652ad19bc4e9.jpg');
+    border: 2px solid black;
+	height : 200px;
 }
 
 * { margin: 0; padding: 0; box-sizing: border-box; }
